# bso

./: .gitignore  README.md  diagram.d2  values.example.yaml  values.yaml
bso-helm/: Chart.yaml  values.yaml
bso-helm/dashboards/: main.json
bso-helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  email-secret.yaml  grafana-secret.yaml  hpa.yaml  influxdb-secret.yaml  ingress.yaml  service.yaml  serviceaccount.yaml  token.yaml
bso-helm/templates/tests/: test-connection.yaml
kubernetes-manifests/: cartservice.yaml
microservices-demo/kubernetes-manifests/: adservice.yaml  cartservice.yaml  checkoutservice.yaml  currencyservice.yaml  emailservice.yaml  frontend.yaml  paymentservice.yaml  productcatalogservice.yaml  recommendationservice.yaml  shippingservice.yaml
microservices-demo/src/adservice/: README.md
microservices-demo/src/cartservice/: cartservice.csproj
microservices-demo/src/checkoutservice/: README.md  go.mod  go.sum  main.go
microservices-demo/src/currencyservice/: package-lock.json  package.json
microservices-demo/src/emailservice/: requirements.txt
microservices-demo/src/frontend/: README.md  (+3 more)
src/cartservice/: Dockerfile
src/checkoutservice/: Dockerfile  main.go
src/currencyservice/: client.js  server.js
src/frontend/: handlers.go  main.go  rpc.go
src/productcatalogservice/: server.go
src/recommendationservice/: recommendation_server.py
src/shippingservice/: go.mod  go.sum
trace-analyzer/: Dockerfile  README.md  pyproject.toml
trace-analyzer/src/trace_analyzer/: __init__.py  __main__.py  influxdb.py  process.py
(+19 files in other folders)
