[project]
name = "trace-analyzer"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Opliko", email = "opliko.reg@protonmail.com" }
]
dependencies = [
    "influxdb-client[ciso,async,extra]>=1.43.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/trace_analyzer"]
